--- a/kalashnikov/index.html
+++ b/kalashnikov/index.html
@@ -416,6 +416,7 @@
         </div>
     </div>
 
+    <script src="./js/smoothscroll.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
