--- a/electro/portfolio.html
+++ b/electro/portfolio.html
@@ -199,7 +199,17 @@
         </div>
         <section class="portfolio">
             <div class="container">
-
+                <div class="portfolio__header">
+                    <button class="button portfolio__tab-title js-tab-header" data-heading="Все работы">Все работы</button>
+                    <button class="button portfolio__tab-title js-tab-header" data-heading="Молниезащита">Молниезащита</button>
+                    <button class="button portfolio__tab-title js-tab-header" data-heading="Электромонтаж">Электромонтажные работы</button>
+                    <button class="button portfolio__tab-title js-tab-header" data-heading="Заземление">Заземление</button>
+                    <button class="button portfolio__tab-title js-tab-header" data-heading="Измерение сопротивления">Измерение сопротивления контура заземления</button>
+                    <button class="button portfolio__tab-title js-tab-header" data-heading="Проектные роботы">Проектные роботы</button>
+                    <span class="portfolio__tab-underline js-tab-underline"></span>
+                </div>
+                <div class="portfolio__container js-tab-container"></div>
+                <button class="button button_blue portfolio__more js-tab-more">Показать еще</button>
             </div>
         </section>
     </main>
