--- a/event/platform/room.html
+++ b/event/platform/room.html
@@ -33,7 +33,6 @@
   <link rel="stylesheet" href="/event/assets/css/unify-globals.css">
 
   <!-- CSS Customization -->
-    <link rel="stylesheet" href="/event/assets/css/coockie.css">
     <link rel="stylesheet" href="/event/assets/css/custom.css">
 </head>
 
@@ -104,10 +103,7 @@
       </div>
     </section>
     <section class="gallery g-pt-70 g-pb-80">
-      <img src="./deco-1.png" class="gallery__deco" alt="Новогодний шар">
-      <img src="./deco-2.png" class="gallery__deco" alt="Новогодний шар">
-      <img src="./deco-3.png" class="gallery__deco" alt="Новогодний шар">
-      <img src="./deco-4.png" class="gallery__deco" alt="Новогодний шар">
+      <img src="./deco-1.png" class="gallery__deco css-rotate-animation js-parallax-item" alt="Новогодний шар">
 
       <div class="container">
         <div class="row">
@@ -130,6 +126,9 @@
     </section>
     <section class="contacts g-pt-60 g-pb-60">
       <img src="./deco-5.png" class="contacts__deco" alt="Новогодний шар">
+      <img src="./deco-2.png" class="gallery__deco js-parallax-item" alt="Новогодний шар">
+      <img src="./deco-3.png" class="gallery__deco js-parallax-item" alt="Новогодний шар">
+      <img src="./deco-4.png" class="gallery__deco js-parallax-item" alt="Новогодний шар">
       <div class="container">
           <div class="row justify-content-center g-mb-30 g-mb-60--md">
               <div class="col-lg-12">
@@ -175,8 +174,8 @@
                       <!-- Figure Info -->
                       <div class="contacts__info">
                           <h4 class="h5 g-color-black g-font-size-18 g-font-size-20--sm g-pb-0 g-pb-15--sm g-brd-bottom--md">Татьяна Марцинковская</h4>
-                          <em class="d-block g-font-style-normal g-font-size-15 text-uppercase g-color-black">+7 968 802 99 87</em>
-                          <a href="mailto:tmartsinkovskaya@phoenixit.ru" class="contacts__link g-font-size-15">tmartsinkovskaya@phoenixit.ru</a>
+                          <em class="d-block g-font-style-normal g-font-size-15 text-uppercase g-color-black">+7 (926) 204-24-61</em>
+                          <a href="mailto:vklimova@phoenixit.ru" class="contacts__link g-font-size-15">vklimova@phoenixit.ru</a>
                       </div>
                       <!-- End Figure Info-->
                   </div>
