--- a/electro/contacts.html
+++ b/electro/contacts.html
@@ -198,10 +198,61 @@
             <div class="container">
                 <div class="contacts__wrap">
                     <div class="contacts__col">
-                        
+                        <h2 class="section__title contacts__title">Контакты</h2>
+                        <p class="contacts__text">Мы всегда на связи с намиши клиентами. Обращайтесь, наши специалисты готовы проконсультировать по любым профессиональным вопросам:</p>
+                        <ul class="contacts__list">
+                            <li class="footer__contact">
+                                <a href="#" class="footer__link">
+                                    <img loading="lazy" src="./img/svg/phone-dark.svg" alt="Иконка">
+                                    <span>(067) 506-01-18 <br> Пн-Пт 09:00 - 18:00</span>
+                                </a>
+                            </li>
+                            <li class="footer__contact">
+                                <span class="footer__text">
+                                    <img loading="lazy" src="./img/svg/adres-dark.svg" alt="Иконка">
+                                    <span>с. Софиевская Борщаговка, ул. Павла Чубинского, 4А, офис 222</span>
+                                </span>
+                            </li>
+                            <li class="footer__contact">
+                                <a href="#" class="footer__link">
+                                    <img loading="lazy" src="./img/svg/mail-dark.svg" alt="Иконка">
+                                    <span>pbv2017@ukr.net</span>
+                                </a>
+                            </li>
+                            <li class="footer__contact">
+                                <span class="footer__text">
+                                    <img loading="lazy" src="./img/svg/adres-dark.svg" alt="Иконка">
+                                    <span>Киев, ул. Межигорская 24Б офис 12 (юридический адрес)</span>
+                                </span>
+                            </li>
+                        </ul>
+                        <div class="contacts__bottom">
+                            <button class="button button_orange hero__button js-toggle-popup" data-target-popup="js-popup-request"><img loading="lazy" src="./img/icon-lightning-sm.png" alt="Иконка"> Оставить заявку</button>
+                            <div class="footer__social-wrap">
+                                <a href="#" class="footer__social-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+                                        <path class="cls-1" d="M20,40A20,20,0,1,1,40,20,20,20,0,0,1,20,40ZM20,1.9A18.1,18.1,0,1,0,38.1,20,18.12,18.12,0,0,0,20,1.9Z"/>
+                                        <path class="cls-1" d="M23.46,20.75H20.92v9.32H17.07V20.75H15.23V17.48h1.84V15.36A3.61,3.61,0,0,1,21,11.47h2.86v3.18H21.74a.79.79,0,0,0-.82.89v1.93H23.8Z"/>    
+                                    </svg>
+                                </a>
+                                <a href="#" class="footer__social-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+                                        <path class="cls-1" d="M20,40A20,20,0,1,1,40,20,20,20,0,0,1,20,40ZM20,1.9A18.1,18.1,0,1,0,38.1,20,18.12,18.12,0,0,0,20,1.9Z"/>
+                                        <path class="cls-1" d="M24.75,12.5h-9.5a2.75,2.75,0,0,0-2.75,2.75v9.5a2.75,2.75,0,0,0,2.75,2.75h9.5a2.75,2.75,0,0,0,2.75-2.75v-9.5a2.75,2.75,0,0,0-2.75-2.75ZM20,24.94A4.94,4.94,0,1,1,24.94,20,5,5,0,0,1,20,24.94Zm5.1-8.86a1.17,1.17,0,1,1,1.17-1.17,1.17,1.17,0,0,1-1.17,1.17ZM20,17.15A2.85,2.85,0,1,0,22.85,20,2.86,2.86,0,0,0,20,17.15Zm9.59,7.6a4.84,4.84,0,0,1-4.84,4.84h-9.5a4.84,4.84,0,0,1-4.84-4.84v-9.5a4.84,4.84,0,0,1,4.84-4.84h9.5a4.84,4.84,0,0,1,4.84,4.84Z"/>
+                                    </svg>
+                                </a>
+                                <a href="#" class="footer__social-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+                                        <path d="M20,40A20,20,0,1,1,40,20,20,20,0,0,1,20,40ZM20,1.9A18.1,18.1,0,1,0,38.1,20,18.12,18.12,0,0,0,20,1.9Z"/>
+                                        <path class="cls-1" d="M20,27.65h0c-.64,0-6.28-.06-7.88-.49a3.26,3.26,0,0,1-2.3-2.3A23.41,23.41,0,0,1,9.42,20a23.71,23.71,0,0,1,.39-4.87h0a3.36,3.36,0,0,1,2.3-2.32h0A60.16,60.16,0,0,1,20,12.35h0c.64,0,6.3.06,7.88.49a3.26,3.26,0,0,1,2.3,2.3,22.5,22.5,0,0,1,.39,4.9,24.07,24.07,0,0,1-.39,4.83h0a3.28,3.28,0,0,1-2.3,2.3h0a60,60,0,0,1-7.87.47ZM11.4,15.57A24.3,24.3,0,0,0,11.07,20v0a22.62,22.62,0,0,0,.33,4.4,1.62,1.62,0,0,0,1.14,1.13A55,55,0,0,0,20,26a58.51,58.51,0,0,0,7.46-.41,1.59,1.59,0,0,0,1.13-1.13,22.14,22.14,0,0,0,.34-4.4v0a22.45,22.45,0,0,0-.33-4.45h0a1.62,1.62,0,0,0-1.14-1.13A54.86,54.86,0,0,0,20,14a56.73,56.73,0,0,0-7.46.41,1.67,1.67,0,0,0-1.14,1.15Zm18,9.09Zm-11.5-1.31v-6.7L23.68,20Z"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="contacts__col">
-                        
+                        <h2 class="section__title contacts__title">Как к нам добраться</h2>
+                        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af0654adad83bf714235c18abadfc14904c8983466c2cb4f3ceb00a9eff12543c&amp;source=constructor" width="100%" height="375" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
