--- a/electro/about.html
+++ b/electro/about.html
@@ -91,7 +91,7 @@
                         <option value="none" hidden>RU</option>
                         <option value="RU">RU</option>
                         <option value="UA">UA</option>
-                        <option value="EN">EN</option>
+                        
                     </select>
                 </div>
                 <button class="button burger js-burger">
@@ -125,7 +125,7 @@
                     <option value="none" hidden>RU</option>
                     <option value="RU">RU</option>
                     <option value="UA">UA</option>
-                    <option value="EN">EN</option>
+                    
                 </select>
             </div>
         </div>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="about__banner">
                         <img src="./img/big-logo.png" alt="Логотип" class="about__logo">
-                        <span class="about__title">Мы выполнили более 5&nbsp;000 проектов </span>
+                        <span class="about__title">Мы выполнили <br> более 5&nbsp;000 проектов </span>
                         <span class="about__subtitle">для наших клиентов, если вы заинтересованы?</span>
                         <button class="button button_orange hero__button js-toggle-popup" data-target-popup="js-popup-request"><img loading="lazy" src="./img/icon-lightning-sm.png" alt="Иконка"> Оставить заявку</button>
                     </div>
