--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -345,64 +345,39 @@
             <div class="slider__body js-slider-color">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_01.jpg" data-srcset="./img/rolls/film_simulations_01.webp" alt="Provia">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/TH_Prasit_Limpasatirakit_4.jpg" data-srcset="./img/rolls/TH_Prasit_Limpasatirakit_4.webp" alt="Provia">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">Provia</span>
+                        <span class="slider__author">Prasit Limpasatirakit ©</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_02.jpg" data-srcset="./img/rolls/film_simulations_02.webp" alt="Velvia">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/CN_Vincent_Ho_14.jpg" data-srcset="./img/rolls/CN_Vincent_Ho_14.webp" alt="Velvia">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">Velvia</span>
+                        <span class="slider__author">Vincent Ho ©</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_03.jpg" data-srcset="./img/rolls/film_simulations_03.webp" alt="ASTIA">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/Pål_Laukli_NR_0005.jpg" data-srcset="./img/rolls/Pål_Laukli_NR_0005.webp" alt="ASTIA">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">ASTIA</span>
+                        <span class="slider__author">Pål Laukli ©</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_04.jpg" data-srcset="./img/rolls/film_simulations_04.webp" alt="Classic Chrome">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/ID_Gathot_Subroto_Acros.jpg" data-srcset="./img/rolls/ID_Gathot_Subroto_Acros.webp" alt="Classic Chrome">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">Classic Chrome</span>
+                        <span class="slider__author">Gathot Subroto ©</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_05.jpg" data-srcset="./img/rolls/film_simulations_05.webp" alt="PRO Neg HI">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/JP_Reiko_Hagihara_18.jpg" data-srcset="./img/rolls/JP_Reiko_Hagihara_18.webp" alt="PRO Neg HI">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">PRO Neg HI</span>
+                        <span class="slider__author">Reiko Hagihara ©</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_06.jpg" data-srcset="./img/rolls/film_simulations_06.webp" alt="PRO Neg Std">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/TH_Prasit_Limpasatirakit_1.jpg" data-srcset="./img/rolls/TH_Prasit_Limpasatirakit_1.webp" alt="PRO Neg Std">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">PRO Neg Std</span>
+                        <span class="slider__author">Prasit Limpasatirakit ©</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_07.jpg" data-srcset="./img/rolls/film_simulations_07.webp" alt="Classic Neg">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/AU_Julia_Trotti_9.jpg" data-srcset="./img/rolls/AU_Julia_Trotti_9.webp" alt="Classic Neg">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">Classic Neg</span>
-                    </div>
-                    <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_08.jpg" data-srcset="./img/rolls/film_simulations_08.webp" alt="ETERNA">
-                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">ETERNA</span>
-                    </div>
-                    <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_09.jpg" data-srcset="./img/rolls/film_simulations_09.webp" alt="ETERNA Bleach Bypass">
-                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">ETERNA Bleach Bypass</span>
-                    </div>
-                    <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_10.jpg" data-srcset="./img/rolls/film_simulations_10.webp" alt="ACROS">
-                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">ACROS</span>
-                    </div>
-                    <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_11.jpg" data-srcset="./img/rolls/film_simulations_11.webp" alt="Monochrome">
-                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">Monochrome</span>
-                    </div>
-                    <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_12.jpg" data-srcset="./img/rolls/film_simulations_12.webp" alt="Sepia">
-                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                        <span class="slider__mode">Sepia</span>
+                        <span class="slider__author">Julia Trotti ©</span>
                     </div>
                 </div>
                 <div class="slider__control-container">
@@ -416,6 +391,18 @@
                             <use width="40" xlink:href="./img/icons.svg#slider-arrow"></use>
                         </svg>
                     </button>
+                </div>
+                <div class="slider__pagination-block">
+                    <div class="slider__names">
+                        <h3 class="slider__name">Classic Neg</h3>
+                        <h3 class="slider__name">Velvia</h3>
+                        <h3 class="slider__name">Eterna BB</h3>
+                        <h3 class="slider__name">Acros</h3>
+                        <h3 class="slider__name">Velvia</h3>
+                        <h3 class="slider__name">Classic Chrome</h3>
+                        <h3 class="slider__name">Astia</h3>
+                    </div>
+                    <div class="swiper-pagination slider__pagination"></div>
                 </div>
             </div>
             <div class="sooc">
