--- a/kalashnikov/login.html
+++ b/kalashnikov/login.html
@@ -60,6 +60,14 @@
                     <input type="text" name="user_name" class="form__input form__input_blue" placeholder="Имя">
                     <input type="email" name="user_email" class="form__input form__input_blue" placeholder="E-mail">
                     <input type="password" name="user_pass" class="form__input form__input_blue" placeholder="Пароль">
+                    <div class="login__select dropdown js-dorpdown">
+                        <select>
+                            <option value="Значение 1">Значение 1</option>
+                            <option value="Значение 2">Значение 2</option>
+                            <option value="Значение 3">Значение 3</option>
+                            <option value="Значение 4">Значение 4</option>
+                        </select>
+                    </div>
                     <button type="submit" class="button form__button"><span>Вход на сайт</span></button>
                 </form>
             </div>
@@ -116,6 +124,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/smoothscroll.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
