--- a/kalashnikov/login.html
+++ b/kalashnikov/login.html
@@ -62,6 +62,7 @@
                     <input type="password" name="user_pass" class="form__input form__input_blue" placeholder="Пароль">
                     <div class="login__select dropdown js-dorpdown">
                         <select>
+                            <option value="none" hidden>Компания</option>
                             <option value="Значение 1">Значение 1</option>
                             <option value="Значение 2">Значение 2</option>
                             <option value="Значение 3">Значение 3</option>
