--- a/citadel/index.html
+++ b/citadel/index.html
@@ -142,18 +142,18 @@
                             <span class="about__text">Задайте вопрос через форму и мы свяжемся с вами в течение дня</span>
                             <form class="form js-contact-form">
                                 <div class="form__fields">
-                                    <input type="text" name="user_name" class="form__input" placeholder="Ваше имя">
-                                    <input type="email" name="user_mail" class="form__input" placeholder="e-mail" required>
-                                    <input type="tel" name="user_tel" class="form__input" placeholder="Телефон" required>
-                                    <input type="text" name="user_company" class="form__input" placeholder="Компания">
+                                    <input type="text" name="user_name" class="form__input" placeholder="ВАШЕ ИМЯ">
+                                    <input type="email" name="user_mail" class="form__input" placeholder="E-MAIL">
+                                    <input type="tel" name="user_tel" class="form__input" placeholder="ТЕЛЕФОН">
+                                    <input type="text" name="user_company" class="form__input" placeholder="КОМПАНИЯ">
                                     <textarea class="form__textarea" name="user_wishes" rows="3" placeholder="Ваши пожелания"></textarea>
                                 </div>
                                 <label class="form__label">
-                                    <input class="form__checkbox" type="checkbox" name="agreement" required>
+                                    <input class="form__checkbox js-form-checkbox" type="checkbox" name="agreement">
                                     <span class="form__fake"></span>
                                     <span class="form__label-text">Нажимая кнопку "Отправить" я соглашаюсь с <button type="button" class="form__label-link js-policy-trigger">Политикой обработки персональных данных</button></span>
                                 </label>
-                                <button type="submit" class="button form__button">отправить</button>
+                                <button type="submit" class="button form__button js-form-button">отправить</button>
                             </form>
                         </div>
                         <div class="contacts__map">
