--- a/kalashnikov/login.html
+++ b/kalashnikov/login.html
@@ -67,6 +67,18 @@
                             <option value="Значение 2">Значение 2</option>
                             <option value="Значение 3">Значение 3</option>
                             <option value="Значение 4">Значение 4</option>
+                            <option value="Значение 3">Значение 3</option>
+                            <option value="Значение 4">Значение 4</option>
+                            <option value="Значение 3">Значение 3</option>
+                            <option value="Значение 4">Значение 4</option>
+                            <option value="Значение 3">Значение 3</option>
+                            <option value="Значение 4">Значение 4</option>
+                            <option value="Значение 3">Значение 3</option>
+                            <option value="Значение 4">Значение 4</option>
+                            <option value="Значение 3">Значение 3</option>
+                            <option value="Значение 4">Значение 4</option>
+                            <option value="Значение 3">Значение 3</option>
+                            <option value="Значение 4">Значение 4</option>
                         </select>
                     </div>
                     <button type="submit" class="button form__button"><span>Вход на сайт</span></button>
