--- a/kalashnikov/index.html
+++ b/kalashnikov/index.html
@@ -112,7 +112,7 @@
             <div class="container">
                 <div class="embed__wrap">
                     <div class="embed__iframe-wrap">
-                        <iframe class="embed__iframe" src="http://panel.cavadro.com/iframe/2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <!-- <iframe class="embed__iframe" src="http://panel.cavadro.com/iframe/2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                     </div>
                     <span class="embed__subtitle"><span>Обращение генерального директора</span></span>
                 </div>
@@ -126,7 +126,7 @@
                     <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
                     <h2 class="big-title__text">Трансляция мероприятия</h2>
                     <div class="translation__media">
-                        <iframe src="http://panel.cavadro.com/iframe/1" frameborder="0"></iframe>
+                        <!-- <iframe src="http://panel.cavadro.com/iframe/1" frameborder="0"></iframe> -->
                     </div>
                 </div>
             </div>
