--- a/citadel/index.html
+++ b/citadel/index.html
@@ -29,14 +29,8 @@
                     </ul>
                 </nav>
                 <div class="language">
-                    <label class="language__item">
-                        <input class="language__radio js-language-radio" type="radio" name="language" value="rus" checked>
-                        <span class="language__text">rus</span>
-                    </label>
-                    <label class="language__item">
-                        <input class="language__radio js-language-radio" type="radio" name="language" value="eng">
-                        <span class="language__text">eng</span>
-                    </label>
+                    <a href="#" class="language__item active">rus</a>
+                    <a href="#" class="language__item">eng</a>
                 </div>
                 <button class="burger js-burger"><span></span></button>
             </div>
